Publications, letter spacing issue

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -623,6 +623,7 @@ address.fov-donate{
 	font-weight: 600;
 	font-size: 13.5pt;
 	color: #424242;
+	letter-spacing: 0.5px;
 }
 
 .fa {
@@ -684,6 +685,7 @@ span.italic{
 	text-decoration: none;
 	font-weight: bold;
 	color: #424242;
+	letter-spacing: 0.5px;
 }
 
 span.italic2{
@@ -691,12 +693,14 @@ span.italic2{
 	text-decoration: none;
 	font-weight: bold;
 	color: #939393;
+	letter-spacing: 0.5px;
 }
 
 span.italicregular{
 	font-style:italic;
 	text-decoration: none;
 	color: #939393;
+	letter-spacing: 0.5px;
 }
 
 span.designation{
@@ -712,6 +716,7 @@ a.mailid{
 	text-decoration: none;
 	color: #939393;
 	font-size: 14pt;
+	letter-spacing: 0.5px;
 	border-top: 0px;
 	border-left: 0px;
 	border-right: 0px;
@@ -977,6 +982,7 @@ p.icon-attribution{
 	font-family: "Crimson Text", serif;
 	font-size: 8pt;
 	font-style: italic;
+	letter-spacing: 0.5px;
 }
 
 //Collaboration page responsive
@@ -1044,6 +1050,7 @@ ul#results-container{
 	font-family: "Crimson Text", serif;
 	font-size: 12pt;
 	font-style: italic;
+	letter-spacing: 0.5px;
 	padding: 15px 15px 15px 15px;
 	li{
 	padding-bottom: 5px;
